--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,22 +6,22 @@
           <span class="pl-2 text-blue-200 font-bold">Polar-C100</span>
         </div>
         <div class="text-right p-4 m-2 bg-gray-200 rounded ">
-          <span class="text-4xl">{{result}}</span>
+          <span class="text-4xl">{{pantalla}}</span>
         </div>
         <div>
-          <div class="rounded-full bg-red-400 w-8 h-8 text-center m-2" (click)="reset()">
+          <div class="rounded-full bg-red-400 w-8 h-8 text-center m-2" (click)="reiniciar()">
             <span class="text-2xl">c</span>
           </div>
-          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2">
+          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="dividir()">
             <span class="text-2xl">÷</span>
           </div>
-          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2">
+          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="multiplicar()">
             <span class="text-2xl">x</span>
           </div>
-          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2">
+          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="restar()">
             <span class="text-2xl">-</span>
           </div>
-          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="sum()">
+          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="sumar()">
             <span class="text-2xl">+</span>
           </div>
         </div>
