--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,9 @@
           <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="sumar()">
             <span class="text-2xl">+</span>
           </div>
+          <div class="rounded-full bg-green-400 w-8 h-8 text-center m-2" (click)="igual()">
+            <span class="text-2xl">=</span>
+          </div>
         </div>
       </div>
     </div>
