--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,24 +8,36 @@
         <div class="text-right p-4 m-2 bg-gray-200 rounded ">
           <span class="text-4xl">{{pantalla}}</span>
         </div>
-        <div>
-          <div class="rounded-full bg-red-400 w-8 h-8 text-center m-2" (click)="reiniciar()">
-            <span class="text-2xl">c</span>
+        <div class="grid grid-cols-5 select-none" id="teclado">
+          <div id="columna_1">
+            <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="signo()">
+              <span class="text-2xl">±</span>
+            </div>
+            <div class="rounded-full bg-red-400 w-8 h-8 text-center m-2" (click)="reiniciar()">
+              <span class="text-2xl">c</span>
+            </div>
           </div>
-          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="dividir()">
-            <span class="text-2xl">÷</span>
+
+          <div id="columna_2"></div>
+          <div id="columna_3"></div>
+          <div id="columna_4">
+            <div class="rounded-full bg-green-400 w-8 h-8 text-center m-2" (click)="igual()">
+              <span class="text-2xl">=</span>
+            </div>
           </div>
-          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="multiplicar()">
-            <span class="text-2xl">x</span>
-          </div>
-          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="restar()">
-            <span class="text-2xl">-</span>
-          </div>
-          <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="sumar()">
-            <span class="text-2xl">+</span>
-          </div>
-          <div class="rounded-full bg-green-400 w-8 h-8 text-center m-2" (click)="igual()">
-            <span class="text-2xl">=</span>
+          <div id="columna_5">
+            <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="dividir()">
+              <span class="text-2xl">÷</span>
+            </div>
+            <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="multiplicar()">
+              <span class="text-2xl">x</span>
+            </div>
+            <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="restar()">
+              <span class="text-2xl">-</span>
+            </div>
+            <div class="rounded-full bg-blue-400 w-8 h-8 text-center m-2" (click)="sumar()">
+              <span class="text-2xl">+</span>
+            </div>
           </div>
         </div>
       </div>
